# files

./: Cargo.toml  README.md
src/: audio_file.rs  dir.rs  file_base.rs  file_types.rs  image_file.rs  lib.rs  macros.rs  model_file.rs  temporary.rs
src/files/: audio_file.rs  file.rs  image.rs  jpeg.rs  json.rs  md.rs  mod.rs  png.rs  toml.rs
src/files/audio/: mod.rs  ogg.rs
src/files/images/: avif.rs  bmp.rs  exr.rs  ff.rs  gif.rs  hdr.rs  ico.rs  jpeg.rs  mod.rs  png.rs  pnm.rs  qoi.rs  tga.rs  tiff.rs  webp.rs
src/files/text/: json.rs  md.rs  mod.rs  toml.rs  txt.rs
tests/: test.rs
