[package]
name = "filess"
version = "0.3.2"
edition = "2024"
description = "Simplified file management"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "deref", "deref_mut", "debug", "as_ref", "into_iterator"] }
image = { version = "0.25.9", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
serde_toml = { package = "toml", version = "0.9.11", optional = true, features = ["fast_hash"] }
symphonia = { version = "0.5.5", optional = true, default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["fs", "parking_lot"], optional = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["all-files", "rayon"]
# default = ["serde", "image", "async", "all-files", "rayon"]
# default = ["serde", "image", "async", "rayon"]

all-files = ["all-text", "all-images", "all-audio"]
all-text = ["json", "toml", "md", "txt"]
all-images = ["jpeg", "png", "webp", "avif", "tiff"]
all-audio = ["ogg"]

json = ["dep:serde_json", "_any_text"]
toml = ["dep:serde_toml", "_any_text"]
md = ["_any_text"]
txt = ["_any_text"]

jpeg = ["_any_image", "image?/jpeg"]
png = ["_any_image", "image?/png"]
webp = ["_any_image", "image?/webp"]
avif = ["_any_image", "image?/avif"]
tiff = ["_any_image", "image?/tiff"]

ogg = ["_any_audio", "symphonia?/ogg"]

_any_text = []
_any_image = []
_any_audio = []

serde = ["dep:serde", "image?/serde"]
image = ["dep:image"]
image-nasm = ["image", "image/nasm"]
rayon = ["image?/rayon"]
async = ["dep:tokio"]
symphonia = ["dep:symphonia"]
symphonia-simd = ["symphonia", "symphonia/opt-simd"]

# [target.'cfg(target_os = "linux")'.dependencies]
# tokio = { version = "1.49.0", features = ["io-uring"] }
